fix: testimonials carousel on mobile

--- a/src/app/pages/home-page/components/testimonials/testimonials.component.scss
+++ b/src/app/pages/home-page/components/testimonials/testimonials.component.scss
@@ -83,13 +83,12 @@
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 16px;
   }
 
   &__arrow {
     flex-shrink: 0;
-    margin-top: 80px;
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -311,9 +310,10 @@
     }
 
     &__track {
-      grid-auto-columns: calc(100vw - 48px);
-      padding-left: 24px;
-      padding-right: 24px;
+      grid-auto-columns: calc(100vw - 64px);
+      padding-left: 32px;
+      padding-right: 32px;
+      scroll-padding-left: 32px;
     }
   }
 }
